--- a/Systems/Api/LostAnimals.Api/Pages/Index.cshtml
+++ b/Systems/Api/LostAnimals.Api/Pages/Index.cshtml
@@ -1,11 +1,23 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Home";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <p><a href="http://localhost:5024/docs">Swagger</a></p>
+<div>
+    <h1 class="display-4">@(String.IsNullOrEmpty(Model.HelloMessage) ? "LostAnimals API" : Model.HelloMessage)</h1>
+
+    <div style="margin-bottom: 20px;">
+        <div><a href="/health">Check health</a></div>
+
+        @if (Model.OpenApiEnabled)
+        {
+            <div><a href="/docs/index.html">Swagger</a></div>
+        }
+
+        <div><a class="d-block mb-2" href="@Model.IdentityServerUrl/.well-known/openid-configuration">OpenId configuration</a></div>
+    </div>
+    <div style="right: 15px; bottom: 15px; color: navy !important; position: absolute;">
+        @Model.Version
+    </div>
 </div>
