Added notes page

--- a/Systems/Web/LostAnimals.Web/Layout/NavMenu.razor
+++ b/Systems/Web/LostAnimals.Web/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
 ﻿﻿<MudNavMenu>
     <MudNavLink Href="/" Match="NavLinkMatch.All">Главная страница</MudNavLink>
-    <MudNavLink Href="/books" Match="NavLinkMatch.Prefix">Объявления</MudNavLink>
+    <MudNavLink Href="/notes" Match="NavLinkMatch.Prefix">Объявления</MudNavLink>
 </MudNavMenu>
