--- a/Systems/Web/LostAnimals.Web/Pages/Notes/Notes.razor
+++ b/Systems/Web/LostAnimals.Web/Pages/Notes/Notes.razor
@@ -1,11 +1,9 @@
-﻿<!-- Notes.razor -->
-@page "/notes"
+﻿@page "/notes"
 @using LostAnimals.Web.Pages.Notes.Services
 @using LostAnimals.Web.Pages.Notes.Models
 @using LostAnimals.Web.Pages.Photo.Models
 @using LostAnimals.Web.Pages.Photo.Services
 @using LostAnimals.Web.Components
-@using Microsoft.AspNetCore.Authorization
 @inject INoteService NoteService
 @inject IPhotoService PhotoService
 
@@ -13,16 +11,16 @@
 
 @if (notes != null)
 {
-    <MudItemContainer>
+    <MudContainer>
         @foreach (var note in notes)
         {
             <NoteCard Note="note" PhotosDictionary="photosDictionary" />
         }
-    </MudItemContainer>
+    </MudContainer>
 }
 else
 {
-    <MudText>Loading...</MudText>
+    <MudProgressCircular Color="Color.Primary" Indeterminate="true" Class="align-items-center justify-content-center" />
 }
 
 @code {
