Changes in LostAnimals.Web

--- a/Systems/Web/LostAnimals.Web/Pages/Notes/Note.razor
+++ b/Systems/Web/LostAnimals.Web/Pages/Notes/Note.razor
@@ -62,7 +62,7 @@
         NoteModel = await NoteService.GetNote(Guid.Parse(Id));
         await LoadPhotos();
 
-        if (NoteModel != null)
+        /*if (NoteModel != null)
         {
             await JSRuntime.InvokeVoidAsync(
                 "initMap",
@@ -70,7 +70,7 @@
                 NoteModel.Latitude,
                 NoteModel.Longitude
             );
-        }
+        }*/
     }
 
     /*protected override async Task OnAfterRenderAsync(bool firstRender)
