--- a/Systems/Web/LostAnimals.Web/Components/NoteCard.razor
+++ b/Systems/Web/LostAnimals.Web/Components/NoteCard.razor
@@ -6,7 +6,7 @@
     <MudLink Href="@($"/note/{Note.Id.ToString()}")" Class="text-decoration-none">
     <MudText Typo="Typo.h6">@Note.Title</MudText>
     </MudLink>
-    <MudText Typo="Typo.subtitle1" Color="Color.Primary" Class="mt-2 mb-2">@Note.CategoryName</MudText>
+    <MudButton Class="mt-2 mb-2 mud-theme-primary">@Note.CategoryName</MudButton>
     <MudText Typo="Typo.subtitle2" Color="Color.Secondary">Автор: @Note.Username, @Note.CreatedDate.ToString()</MudText>
     
     @if (@Note.Content.Length > 200){
