--- a/Systems/Web/LostAnimals.Web/Pages/Notes/NotePage.razor
+++ b/Systems/Web/LostAnimals.Web/Pages/Notes/NotePage.razor
@@ -15,29 +15,43 @@
     @if (NoteModel != null)
     {
         <MudText Typo="Typo.h5">@NoteModel.Title</MudText>
-        <MudText Typo="Typo.subtitle1" Color="Color.Primary" Class="mt-2 mb-2">@NoteModel.CategoryName</MudText>
-        <MudText Typo="Typo.subtitle2" Color="Color.Secondary">Автор: @NoteModel.Username, @NoteModel.CreatedDate.ToShortDateString()</MudText>
+        <MudButton Class="mt-2 mb-2 mud-theme-primary">@NoteModel.CategoryName</MudButton>
+        <MudText Typo="Typo.subtitle2" Color="Color.Secondary">Автор: @NoteModel.Username, @NoteModel.CreatedDate.ToString()</MudText>
         <MudText Typo="Typo.body1" Class="mt-2">@NoteModel.Content</MudText>
         @if (NoteModel.PhotoGalleryId != null)
         {
             if (Photos != null && Photos.Any())
             {
-                foreach (var photo in Photos)
+                <MudItem style="display: flex; justify-content: center; align-items: center;">
+                @foreach (var photo in Photos)
                 {
                     <MudImage Src="@GetFullImagePath(@photo)" Alt="Animal image" Style="max-height: 400px" Class="mt-2 mr-2" />
                 }
+                </MudItem>
             }
         }
-        <MudItem id="map" style="max-width: 1200px; height: 400px;" Class="mb-5 mt-5">
+        <MudItem id="map" style="width: 100%; height: 400px; display: flex; justify-content: center; align-items: center;" Class="mb-5 mt-5">
         </MudItem>
-        <MudText Typo="Typo.subtitle1" Color="Color.Secondary" Class="mt-2">Комментарии: @(NoteModel.Comments?.Count ?? 0)</MudText>
+        <MudText Typo="Typo.subtitle1" Color="Color.Secondary" Class="mt-2 mb-2">Комментарии: @(NoteModel.Comments?.Count ?? 0)</MudText>
         @if (NoteModel.Comments != null && NoteModel.Comments.Any())
         {
-            foreach (var comment in NoteModel.Comments)
+            var parentComments = NoteModel.Comments.Where(c => c.ParentCommentId == null).OrderBy(c => c.CreatedDate).ToList();
+            foreach (var parentComment in parentComments)
             {
                 <MudPaper Class="pa-2 mb-2" Elevation="1">
-                    <MudText Typo="Typo.subtitle2" Color="Color.Secondary">@comment.UserName, @comment.CreatedDate.ToShortDateString()</MudText>
-                    <MudText Typo="Typo.body1" Class="mt-2">@comment.Content</MudText>
+                    <MudText Typo="Typo.subtitle2" Color="Color.Secondary">@parentComment.UserName, @parentComment.CreatedDate.ToString()</MudText>
+                    <MudText Typo="Typo.body1" Class="mt-2">@parentComment.Content</MudText>
+                    @if (NoteModel.Comments.Any(c => c.ParentCommentId == parentComment.Id))
+                    {
+                        var childComments = NoteModel.Comments.Where(c => c.ParentCommentId == parentComment.Id).OrderBy(c => c.CreatedDate).ToList();
+                        foreach (var childComment in childComments)
+                        {
+                            <MudPaper Class="pa-2 mb-2 ml-4" Elevation="1">
+                                <MudText Typo="Typo.subtitle2" Color="Color.Secondary">@childComment.UserName, @childComment.CreatedDate.ToString()</MudText>
+                                <MudText Typo="Typo.body1" Class="mt-2">@childComment.Content</MudText>
+                            </MudPaper>
+                        }
+                    }
                 </MudPaper>
             }
         }
@@ -48,6 +62,7 @@
     }
 
 </MudPaper>
+
 
 @code {
     [Parameter]
