--- a/Systems/Web/LostAnimals.Web/Pages/Notes/AllNotesPage.razor
+++ b/Systems/Web/LostAnimals.Web/Pages/Notes/AllNotesPage.razor
@@ -20,7 +20,9 @@
 }
 else
 {
-    <MudProgressCircular Color="Color.Primary" Indeterminate="true" Class="align-items-center justify-content-center" />
+    <div style="display: flex; align-items: center; justify-content: center; height: 60vh;">
+        <MudProgressCircular Color="Color.Primary" Size="Size.Large" Indeterminate="true" />
+    </div>
 }
 
 @code {
