--- a/Systems/Web/LostAnimals.Web/Pages/Home.razor
+++ b/Systems/Web/LostAnimals.Web/Pages/Home.razor
@@ -10,11 +10,11 @@
         Мы рады приветствовать вас на нашем портале, посвященном поиску пропавших и найденных домашних животных. Наш портал создан для помощи людям и их питомцам в трудную минуту. Здесь вы можете разместить объявление о пропаже или находке животного, а также просмотреть объявления других пользователей.
     </MudText>
     <MudContainer Class="d-flex justify-content-center mb-10 mt-2">
-        <MudButton Color="Color.Primary" Variant="Variant.Filled" Class="mt-4 mr-2" Href="/lost">
+        <MudButton Color="Color.Primary" Variant="Variant.Filled" Class="mt-4 mr-2" Href="/create-note/lost">
             <MudIcon Icon="@Icons.Material.Filled.Pets" Class="mr-1" />
             Я потерял животное
         </MudButton>
-        <MudButton Color="Color.Secondary" Variant="Variant.Filled" Class="mt-4" Href="/found">
+        <MudButton Color="Color.Secondary" Variant="Variant.Filled" Class="mt-4" Href="/create-note/found">
             <MudIcon Icon="@Icons.Material.Filled.Pets" Class="mr-1" />
             Я нашел животное
         </MudButton>
