--- a/Systems/Web/LostAnimals.Web/Pages/Notes/AllNotesPage.razor
+++ b/Systems/Web/LostAnimals.Web/Pages/Notes/AllNotesPage.razor
@@ -32,6 +32,7 @@ else
     protected override async Task OnInitializedAsync()
     {
         notes = await NoteService.GetNotes();
+        notes = notes.OrderByDescending(n => n.CreatedDate);
         await LoadPhotos();
     }
 
