--- a/Systems/Web/LostAnimals.Web/Pages/Notes/CreateNoteDynamic.razor
+++ b/Systems/Web/LostAnimals.Web/Pages/Notes/CreateNoteDynamic.razor
@@ -156,7 +156,7 @@
     public void SetCoordinates(double latitude, double longitude)
     {
         noteModel.Latitude = latitude;
-        noteModel.Longitude = longitude;
+        noteModel.Longtitude = longitude;
         StateHasChanged();
     }
 
